비밀번호 변경 및 회원정보 수정 api 구현 완료

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -125,7 +125,8 @@
                 const registerResponse = await fetch('/api/auth/register', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(textData)
+                    body: JSON.stringify(textData),
+                    credentials:"include"
                 });
 
 
