--- a/frontend/login.html
+++ b/frontend/login.html
@@ -21,7 +21,7 @@
 
     <div class="form-card">
         <h2>로그인</h2>
-        <form class = "login-form" action="/login" method="post">
+        <form id = "login-form" action="/login" method="post">
         <div class="form-group">
             <label for="email">이메일</label>
             <input type="email" id="email" name="email" placeholder="이메일을 입력하세요" required />
@@ -33,48 +33,40 @@
         <div class="form-actions">
             <button type="submit" class="btn" id="submit-btn">로그인</button>
         </div>
+        <div id="error-message" class="error-message"></div>
         </form>
     </div>
 
     <script>
          document.getElementById('login-form').addEventListener('submit', async (e) => {
             e.preventDefault();
-            const submitBtn = document.getElementById('submit-btn');
-            submitBtn.disabled = true;
-            submitBtn.innerText = '처리 중...';
-
+            const errorEl = document.getElementById('error-message');
+            errorEl.innerText = '';
 
             const formData = new FormData(e.target);
-            const textData = {
-                email: formData.get('email'),
-                password: formData.get('password')
-            };
-
+            const data = Object.fromEntries(formData.entries());
+            console.log("✅ 전송할 데이터:", data);
             try {
                 const loginResponse = await fetch('/api/auth/login', {
-                    method: 'GET',
+                    method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(textData)
+                    body: JSON.stringify(data),
+                    credentials: 'include'  
                 });
 
+                 if (loginResponse.ok) {
+                    alert('로그인이 완료되었습니다. 메인 페이지로 이동합니다.');
+                    window.location.href = '/index.html';
+                } else {
 
-                if (!loginResponse.ok) {
                     const errorData = await loginResponse.json();
-                    throw new Error(errorData.detail || '로그인에 실패했습니다.');
+                    errorEl.innerText = errorData.detail || "로그인에 실패했습니다.";
+
                 }
 
-                alert('로그인이 완료되었습니다. 메인 페이지로 이동합니다.');
-                window.location.href = '/index.html';  
-                // 후에는 상단바에 로그인되면 닉네임도 같이 나오게끔 할거임
-
             } catch(error) {
-                errorEl.innerText = error.message;
-            } finally {
-                submitBtn.disabled = false;
-                submitBtn.innerText = '로그인';
-
+                errorEl.innerText = '서버와 통신할 수 없습니다.';
             }
-
         });
     </script>
 </body>
